--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="absolute top-0 bottom-0 left-0 right-0 flex items-center holder bg-gray-900/50">
                 <div class="z-10 max-w-5xl px-4 mx-auto text-center">
                     <img data-aos="zoom-in-up" data-aos-duration="1000" class="mx-auto" src="/شركة_مسك_للسياحة-removebg-preview (1).png" alt="logo" />
-                    <p class="text-base text-gray-300 dark:text-gray-300">
+                    <p data-aos="fade-up" data-aos-duration="1000" class="text-base text-gray-300">
                       Misk Tourism Company, Inc.
                     </p>
                     <p data-aos="zoom-in-down" data-aos-duration="1000" class="my-8 text-xl max-w-md text-gray-300 lg:text-2xl">
@@ -36,32 +36,38 @@
         </div>
     </section>
     <div class="grid grid-cols-1 lg:grid-cols-3 bg-[#d5b373] relative mt-0 lg:-mt-[90px]  z-10  rounded">
-        <div data-aos="fade-up-left" data-aos-duration="1000" class="w-full p-8 mb-10 text-center transition-all bg-blue-900 shadow lg:mb-0">
+        <div class="w-full p-8 mb-10 text-center transition-all bg-blue-900 shadow lg:mb-0">
             <div class="inline-block p-4 mb-6 -mt-16 bg-[#1b5c53] rounded-full">
               <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="text-[#d5b373]" height="16" width="20" viewBox="0 0 640 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M381 114.9L186.1 41.8c-16.7-6.2-35.2-5.3-51.1 2.7L89.1 67.4C78 73 77.2 88.5 87.6 95.2l146.9 94.5L136 240 77.8 214.1c-8.7-3.9-18.8-3.7-27.3 .6L18.3 230.8c-9.3 4.7-11.8 16.8-5 24.7l73.1 85.3c6.1 7.1 15 11.2 24.3 11.2H248.4c5 0 9.9-1.2 14.3-3.4L535.6 212.2c46.5-23.3 82.5-63.3 100.8-112C645.9 75 627.2 48 600.2 48H542.8c-20.2 0-40.2 4.8-58.2 14L381 114.9zM0 480c0 17.7 14.3 32 32 32H608c17.7 0 32-14.3 32-32s-14.3-32-32-32H32c-17.7 0-32 14.3-32 32z"/></svg>
             </div>
-            <h2 class="mb-4 text-2xl font-semibold text-gray-100 dark:text-white"> سافر معنا</h2>
-           
-            <p class="text-base text-gray-300 dark:text-gray-300">
-              سافر معنا لتجربة فريدة ومريحة، استمتع بخدمات ممتازة واستكشاف الوجهات الرائعة بأمان وراحة.
-            </p>
+            <div data-aos="fade-up" data-aos-duration="1000">
+              <h2 class="mb-4 text-2xl font-semibold text-gray-100 dark:text-white"> سافر معنا</h2>
+              <p class="text-base text-gray-300">
+                سافر معنا لتجربة فريدة ومريحة، استمتع بخدمات ممتازة واستكشاف الوجهات الرائعة بأمان وراحة.
+              </p>
+            </div>
         </div>
-        <div data-aos="fade-up-right" data-aos-duration="1000" class="w-full p-8 mb-10 text-center transition-all bg-red-900 shadow lg:mb-0 ">
+        <div class="w-full p-8 mb-10 text-center transition-all bg-red-900 shadow lg:mb-0 ">
             <div class="inline-block p-4 mb-6 -mt-16 bg-[#1b5c53] rounded-full">
               <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="text-[#d5b373]" height="16" width="16" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 32C0 14.3 14.3 0 32 0H480c17.7 0 32 14.3 32 32s-14.3 32-32 32V448c17.7 0 32 14.3 32 32s-14.3 32-32 32H304V464c0-26.5-21.5-48-48-48s-48 21.5-48 48v48H32c-17.7 0-32-14.3-32-32s14.3-32 32-32V64C14.3 64 0 49.7 0 32zm96 80v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V112c0-8.8-7.2-16-16-16H112c-8.8 0-16 7.2-16 16zM240 96c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V112c0-8.8-7.2-16-16-16H240zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V112c0-8.8-7.2-16-16-16H368c-8.8 0-16 7.2-16 16zM112 192c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V208c0-8.8-7.2-16-16-16H112zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V208c0-8.8-7.2-16-16-16H240c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V208c0-8.8-7.2-16-16-16H368zM328 384c13.3 0 24.3-10.9 21-23.8c-10.6-41.5-48.2-72.2-93-72.2s-82.5 30.7-93 72.2c-3.3 12.8 7.8 23.8 21 23.8H328z"/></svg>
             </div>
-            <h2 class="mb-4 text-2xl font-semibold text-gray-100 dark:text-white"> فنادق VIP</h2>
-            <p class="text-base text-gray-300 dark:text-gray-300">
-              فنادق خاصة تقدم تجارب إقامة فاخرة، مع خدمات مميزة وراحة لا مثيل لها في جميع الوجهات.
-            </p>
+            <div data-aos="fade-up" data-aos-duration="1000">
+              <h2 class="mb-4 text-2xl font-semibold text-gray-100 dark:text-white"> فنادق VIP</h2>
+              <p class="text-base text-gray-300">
+                فنادق خاصة تقدم تجارب إقامة فاخرة، مع خدمات مميزة وراحة لا مثيل لها في جميع الوجهات.
+              </p>
+            </div>
         </div>
-        <div data-aos="fade-up" data-aos-duration="1000" class="w-full p-8 mb-10 text-center transition-all bg-blue-900 shadow lg:mb-0 ">
+        <div class="w-full p-8 mb-10 text-center transition-all bg-blue-900 shadow lg:mb-0 ">
             <div class="inline-block p-4 mb-6 -mt-16 bg-[#1b5c53] rounded-full">
               <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="text-[#d5b373]" height="16" width="18" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M60 120l228 71.2L516 120 288 48.8 60 120zM278.5 1.5c6.2-1.9 12.9-1.9 19.1 0l256 80C566.9 85.6 576 98 576 112v16 0 21.2L292.8 237.7c-3.1 1-6.4 1-9.5 0L0 149.2V128 112C0 98 9.1 85.6 22.5 81.5l256-80zm23.9 266.8L576 182.8v46.5l-52.8 16.5c-8.4 2.6-13.1 11.6-10.5 20s11.6 13.1 20 10.5L576 262.8V400c0 14-9.1 26.4-22.5 30.5l-256 80c-6.2 1.9-12.9 1.9-19.1 0l-256-80C9.1 426.4 0 414 0 400V262.8l43.2 13.5c8.4 2.6 17.4-2.1 20-10.5s-2.1-17.4-10.5-20L0 229.2V182.8l273.7 85.5c9.3 2.9 19.3 2.9 28.6 0zm-185.5-2.6c-8.4-2.6-17.4 2.1-20 10.5s2.1 17.4 10.5 20l64 20c8.4 2.6 17.4-2.1 20-10.5s-2.1-17.4-10.5-20l-64-20zm352 30.5c8.4-2.6 13.1-11.6 10.5-20s-11.6-13.1-20-10.5l-64 20c-8.4 2.6-13.1 11.6-10.5 20s11.6 13.1 20 10.5l64-20zm-224 9.5c-8.4-2.6-17.4 2.1-20 10.5s2.1 17.4 10.5 20l38.5 12c9.3 2.9 19.3 2.9 28.6 0l38.5-12c8.4-2.6 13.1-11.6 10.5-20s-11.6-13.1-20-10.5l-38.5 12c-3.1 1-6.4 1-9.5 0l-38.5-12z"/></svg>
             </div>
-            <h2 class="mb-4 text-2xl font-semibold text-gray-100 dark:text-white"> سافر معنا</h2>
-            <p class="text-base text-gray-300 dark:text-gray-300">
-              سافر معنا لتجربة فريدة ومريحة، استمتع بخدمات ممتازة واستكشاف الوجهات الرائعة بأمان وراحة.            </p>
+            <div data-aos="fade-up" data-aos-duration="1000">
+              <h2 class="mb-4 text-2xl font-semibold text-gray-100 dark:text-white"> سافر معنا</h2>
+              <p class="text-base text-gray-300">
+                سافر معنا لتجربة فريدة ومريحة، استمتع بخدمات ممتازة واستكشاف الوجهات الرائعة بأمان وراحة.
+              </p>
+            </div>
         </div>
     </div>
      <!-- Hero content end -->
